Periodically add some references.

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 0ee229b85bc4d8219ffdd555076e47f7f1813218
-% Date: 2023-03-20
+% Commit: 7f36bf14079d925c8cdcfad613c8e9b96a7c3636
+% Date: 2023-03-27
 % ---------------------------
 
 
@@ -7290,7 +7290,19 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@Article{	  borodin.corwin:14:macdonald,
+@InCollection{	  borodin.corwin:14:macdonald,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
+}
+
+@Article{	  borodin.corwin:14:macdonald*1,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -7305,18 +7317,6 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
-}
-
-@InCollection{	  borodin.corwin:14:macdonald*1,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -7743,6 +7743,20 @@
   mrclass	= {33.15},
   mrnumber	= {167651},
   mrreviewer	= {C. Fox}
+}
+
+@Book{		  bracewell:86:fourier,
+  author	= {Bracewell, Ronald N.},
+  title		= {The {F}ourier transform and its applications},
+  series	= {McGraw-Hill Series in Electrical Engineering. Circuits and
+		  Systems},
+  edition	= {Third},
+  publisher	= {McGraw-Hill Book Co., New York},
+  year		= {1986},
+  pages		= {xx+474},
+  isbn		= {0-07-007015-6},
+  mrclass	= {42A38},
+  mrnumber	= {924577}
 }
 
 @Book{		  bradley:07:introduction,
@@ -8820,7 +8834,22 @@
   url		= {https://doi.org/10.2307/2154895}
 }
 
-@Article{	  cairoli.dalang:95:optimal,
+@InCollection{	  cairoli.dalang:95:optimal,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
+}
+
+@Article{	  cairoli.dalang:95:optimal*1,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -8834,21 +8863,6 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
-}
-
-@InCollection{	  cairoli.dalang:95:optimal*1,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -13508,6 +13522,17 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -13523,17 +13548,6 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -16734,6 +16748,23 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -16749,23 +16780,6 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -18903,6 +18917,21 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -18915,21 +18944,6 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -23951,6 +23965,16 @@
   url		= {https://doi.org/10.1002/cpa.21816}
 }
 
+@Article{	  gerolla.hairer.ea:23:fluctuations,
+  title		= {Fluctuations of stochastic PDEs with long-range
+		  correlations},
+  author	= {Luca Gerolla and Martin Hairer and Xue-Mei Li},
+  year		= {2023},
+  month		= {March},
+  journal	= {preprint arXiv:2303.09811},
+  url		= {http://arXiv.org/abs/2303.09811}
+}
+
 @Article{	  gess.ouyang.ea:20:density,
   author	= {Gess, Benjamin and Ouyang, Cheng and Tindel, Samy},
   title		= {Density bounds for solutions to differential equations
@@ -25759,6 +25783,16 @@
   mrreviewer	= {Tam\'{a}s Szabados},
   doi		= {10.1007/s10959-017-0800-2},
   url		= {https://doi.org/10.1007/s10959-017-0800-2}
+}
+
+@Article{	  guo.song.ea:23:stochastic,
+  title		= {Stochastic fractional diffusion equations with Gaussian
+		  noise rough in space},
+  author	= {Yuhui Guo and Jian Song and Xiaoming Song},
+  year		= {2023},
+  month		= {March},
+  journal	= {preprint arXiv:2303.11939},
+  url		= {http://arXiv.org/abs/2303.11939}
 }
 
 @Article{	  guttorp.gneiting:06:studies,
@@ -41818,21 +41852,7 @@
   url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
-@Book{		  nane:06:iterated*1,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
-		  isoperimetric-type inequalities},
-  note		= {Thesis (Ph.D.)--Purdue University},
-  publisher	= {ProQuest LLC, Ann Arbor, MI},
-  year		= {2006},
-  pages		= {47},
-  isbn		= {978-0542-86606-7},
-  mrclass	= {Thesis},
-  mrnumber	= {2709290},
-  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
-}
-
-@Article{	  nane:06:iterated*2,
+@Article{	  nane:06:iterated*1,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
@@ -41849,6 +41869,20 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
+}
+
+@Book{		  nane:06:iterated*2,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
+		  isoperimetric-type inequalities},
+  note		= {Thesis (Ph.D.)--Purdue University},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {2006},
+  pages		= {47},
+  isbn		= {978-0542-86606-7},
+  mrclass	= {Thesis},
+  mrnumber	= {2709290},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
 @Article{	  nane:06:laws,
@@ -47016,7 +47050,22 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@Article{	  perkins:82:local,
+@InCollection{	  perkins:82:local,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
+}
+
+@Article{	  perkins:82:local*1,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -47032,21 +47081,6 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
-}
-
-@InCollection{	  perkins:82:local*1,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -51149,24 +51183,6 @@
 
 @Article{	  seppalainen:93:large,
   author	= {Sepp\"{a}l\"{a}inen, Timo},
-  title		= {Large deviations for lattice systems. {I}. {P}arametrized
-		  independent fields},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {96},
-  year		= {1993},
-  number	= {2},
-  pages		= {241--260},
-  issn		= {0178-8051},
-  mrclass	= {60F10 (60G60)},
-  mrnumber	= {1227034},
-  mrreviewer	= {Francis Comets},
-  doi		= {10.1007/BF01192135},
-  url		= {https://doi.org/10.1007/BF01192135}
-}
-
-@Article{	  seppalainen:93:large*1,
-  author	= {Sepp\"{a}l\"{a}inen, Timo},
   title		= {Large deviations for lattice systems. {II}.
 		  {N}onstationary independent fields},
   journal	= {Probab. Theory Related Fields},
@@ -51181,6 +51197,24 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/BF01199314},
   url		= {https://doi.org/10.1007/BF01199314}
+}
+
+@Article{	  seppalainen:93:large*1,
+  author	= {Sepp\"{a}l\"{a}inen, Timo},
+  title		= {Large deviations for lattice systems. {I}. {P}arametrized
+		  independent fields},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {96},
+  year		= {1993},
+  number	= {2},
+  pages		= {241--260},
+  issn		= {0178-8051},
+  mrclass	= {60F10 (60G60)},
+  mrnumber	= {1227034},
+  mrreviewer	= {Francis Comets},
+  doi		= {10.1007/BF01192135},
+  url		= {https://doi.org/10.1007/BF01192135}
 }
 
 @Article{	  seppalainen:94:large,
@@ -53959,6 +53993,23 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -53973,23 +54024,6 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
