Add a refernce for fractional Sobolev space

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 3b7f33a3ffd9f94b012378fbd6fe00b352ab29a1
+% Commit: 2e34c0c68a4453ac800df56f582b4f8550034f56
 % Date: 2023-03-29
 % ---------------------------
 
@@ -18769,6 +18769,24 @@
   mrreviewer	= {Christoph Schweigert},
   doi		= {10.1007/978-1-4612-2256-9},
   url		= {https://doi.org/10.1007/978-1-4612-2256-9}
+}
+
+@Article{	  di-nezza.palatucci.ea:12:hitchhikers,
+  author	= {Di Nezza, Eleonora and Palatucci, Giampiero and Valdinoci,
+		  Enrico},
+  title		= {Hitchhiker's guide to the fractional {S}obolev spaces},
+  journal	= {Bull. Sci. Math.},
+  fjournal	= {Bulletin des Sciences Math\'{e}matiques},
+  volume	= {136},
+  year		= {2012},
+  number	= {5},
+  pages		= {521--573},
+  issn		= {0007-4497},
+  mrclass	= {46E35 (35A23 35S05 35S30)},
+  mrnumber	= {2944369},
+  mrreviewer	= {Lanzhe Liu},
+  doi		= {10.1016/j.bulsci.2011.12.004},
+  url		= {https://doi.org/10.1016/j.bulsci.2011.12.004}
 }
 
 @Article{	  di-nunno.zhang:16:approximations,
