Add some KPZ related papers

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 2e34c0c68a4453ac800df56f582b4f8550034f56
+% Commit: e88a040e1b703b3ba3600f7486e64401bb1e29f7
 % Date: 2023-03-29
 % ---------------------------
 
@@ -8056,6 +8056,24 @@
   url		= {http://projecteuclid.org/euclid.pjm/1102637666}
 }
 
+@Article{	  broker.mukherjee:19:localization,
+  author	= {Br\"{o}ker, Yannic and Mukherjee, Chiranjib},
+  title		= {Localization of the {G}aussian multiplicative chaos in the
+		  {W}iener space and the stochastic heat equation in strong
+		  disorder},
+  journal	= {Ann. Appl. Probab.},
+  fjournal	= {The Annals of Applied Probability},
+  volume	= {29},
+  year		= {2019},
+  number	= {6},
+  pages		= {3745--3785},
+  issn		= {1050-5164},
+  mrclass	= {60K35 (35Q82 35R60 60F10 60H15 60J55 60J65 82D60)},
+  mrnumber	= {4047991},
+  doi		= {10.1214/19-AAP1491},
+  url		= {https://doi.org/10.1214/19-AAP1491}
+}
+
 @Article{	  brosamler:83:laws,
   author	= {Brosamler, G. A.},
   title		= {Laws of the iterated logarithm for {B}rownian motions on
@@ -11556,6 +11574,24 @@
   url		= {https://doi.org/10.1006/jfan.1993.1069}
 }
 
+@Article{	  chatterjee.dunlap:20:constructing,
+  author	= {Chatterjee, Sourav and Dunlap, Alexander},
+  title		= {Constructing a solution of the {$(2+1)$}-dimensional {KPZ}
+		  equation},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {48},
+  year		= {2020},
+  number	= {2},
+  pages		= {1014--1055},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35K59 35R60 60H50 81T15)},
+  mrnumber	= {4089501},
+  mrreviewer	= {D. Erhard},
+  doi		= {10.1214/19-AOP1382},
+  url		= {https://doi.org/10.1214/19-AOP1382}
+}
+
 @InCollection{	  chekhov:11:algebraic,
   author	= {Chekhov, L. O.},
   title		= {Algebraic geometry and matrix models},
@@ -13891,6 +13927,24 @@
   url		= {https://doi.org/10.1090/qam/42889}
 }
 
+@Article{	  comets.cosco.ea:20:renormalizing,
+  author	= {Comets, Francis and Cosco, Cl\'{e}ment and Mukherjee,
+		  Chiranjib},
+  title		= {Renormalizing the {K}ardar-{P}arisi-{Z}hang equation in
+		  {$d\geq3$} in weak disorder},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {179},
+  year		= {2020},
+  number	= {3},
+  pages		= {713--728},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (35K59 35Q82 35R60 60H15 82D60)},
+  mrnumber	= {4099995},
+  doi		= {10.1007/s10955-020-02539-7},
+  url		= {https://doi.org/10.1007/s10955-020-02539-7}
+}
+
 @Article{	  comets.cranston:13:overlaps,
   author	= {Comets, Francis and Cranston, Michael},
   title		= {Overlaps and pathwise localization in the {A}nderson
@@ -15258,6 +15312,43 @@
   mrnumber	= {4390501},
   doi		= {10.1090/bull/1761},
   url		= {https://doi.org/10.1090/bull/1761}
+}
+
+@Article{	  cosco.nakajima.ea:22:law,
+  author	= {Cosco, Cl\'{e}ment and Nakajima, Shuta and Nakashima,
+		  Makoto},
+  title		= {Law of large numbers and fluctuations in the sub-critical
+		  and {$L^2$} regions for {SHE} and {KPZ} equation in
+		  dimension {$d\geq3$}},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {151},
+  year		= {2022},
+  pages		= {127--173},
+  issn		= {0304-4149},
+  mrclass	= {60K37 (60F05 60G44 60H15 60K35 82D60)},
+  mrnumber	= {4441505},
+  doi		= {10.1016/j.spa.2022.05.010},
+  url		= {https://doi.org/10.1016/j.spa.2022.05.010}
+}
+
+@Article{	  cosco.nakajima:21:gaussian,
+  author	= {Cosco, Cl\'{e}ment and Nakajima, Shuta},
+  title		= {Gaussian fluctuations for the directed polymer partition
+		  function in dimension {$d \geq 3$} and in the whole
+		  {$L^2$}-region},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {57},
+  year		= {2021},
+  number	= {2},
+  pages		= {872--889},
+  issn		= {0246-0203},
+  mrclass	= {60K37 (60F05 82D60)},
+  mrnumber	= {4260488},
+  doi		= {10.1214/20-aihp1100},
+  url		= {https://doi.org/10.1214/20-aihp1100}
 }
 
 @Article{	  cosco.seroussi.ea:21:directed,
@@ -17878,6 +17969,23 @@
   mrreviewer	= {Steven N. Evans},
   doi		= {10.1090/memo/0454},
   url		= {https://doi.org/10.1090/memo/0454}
+}
+
+@Article{	  dawson.salehi:80:spatially,
+  author	= {Dawson, Donald A. and Salehi, Habib},
+  title		= {Spatially homogeneous random evolutions},
+  journal	= {J. Multivariate Anal.},
+  fjournal	= {Journal of Multivariate Analysis},
+  volume	= {10},
+  year		= {1980},
+  number	= {2},
+  pages		= {141--180},
+  issn		= {0047-259X},
+  mrclass	= {60H10 (60J70)},
+  mrnumber	= {575923},
+  mrreviewer	= {Fran\c{c}ois Bronner},
+  doi		= {10.1016/0047-259X(80)90012-3},
+  url		= {https://doi.org/10.1016/0047-259X(80)90012-3}
 }
 
 @Article{	  dawson.vaillancourt.ea:00:stochastic,
@@ -35838,6 +35946,22 @@
   mrreviewer	= {Albert Tortrat}
 }
 
+@Article{	  kupiainen.marcozzi:17:renormalization,
+  author	= {Kupiainen, Antti and Marcozzi, Matteo},
+  title		= {Renormalization of generalized {KPZ} equation},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {166},
+  year		= {2017},
+  number	= {3-4},
+  pages		= {876--902},
+  issn		= {0022-4715},
+  mrclass	= {82C28},
+  mrnumber	= {3607594},
+  doi		= {10.1007/s10955-016-1636-3},
+  url		= {https://doi.org/10.1007/s10955-016-1636-3}
+}
+
 @Article{	  kupiainen:16:renormalization,
   author	= {Kupiainen, Antti},
   title		= {Renormalization group and stochastic {PDE}s},
@@ -37943,6 +38067,25 @@
   isbn		= {978-3-0348-0556-8; 978-3-0348-0557-5},
   mrclass	= {47D06 (01A75 34G20 35Kxx 46M35 46N20 47N20 58D25)},
   mrnumber	= {3012216}
+}
+
+@Article{	  lygkonis.zygouras:22:edwards-wilkinson,
+  author	= {Lygkonis, Dimitris and Zygouras, Nikos},
+  title		= {Edwards-{W}ilkinson fluctuations for the directed polymer
+		  in the full {$L^2$}-regime for dimensions {$d\geq3$}},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {58},
+  year		= {2022},
+  number	= {1},
+  pages		= {65--104},
+  issn		= {0246-0203},
+  mrclass	= {82B44 (60K35 82D60)},
+  mrnumber	= {4374673},
+  mrreviewer	= {Xiaolin Zeng},
+  doi		= {10.1214/21-aihp1173},
+  url		= {https://doi.org/10.1214/21-aihp1173}
 }
 
 @Book{		  lyons.caruana.ea:07:differential,
@@ -41916,6 +42059,23 @@
   mrreviewer	= {Nariaki Sugiura}
 }
 
+@Article{	  mukherjee.shamov.ea:16:weak,
+  author	= {Mukherjee, Chiranjib and Shamov, Alexander and Zeitouni,
+		  Ofer},
+  title		= {Weak and strong disorder for the stochastic heat equation
+		  and continuous directed polymers in {$d\geq 3$}},
+  journal	= {Electron. Commun. Probab.},
+  fjournal	= {Electronic Communications in Probability},
+  volume	= {21},
+  year		= {2016},
+  pages		= {Paper No. 61, 12},
+  mrclass	= {60K35 (60G20 60H15 82D60)},
+  mrnumber	= {3548773},
+  mrreviewer	= {Mathew Joseph},
+  doi		= {10.1214/16-ECP18},
+  url		= {https://doi.org/10.1214/16-ECP18}
+}
+
 @Article{	  mukherjee.varadhan:16:brownian,
   author	= {Mukherjee, Chiranjib and Varadhan, S. R. S.},
   title		= {Brownian occupation measures, compactness and large
@@ -42390,6 +42550,22 @@
   mrnumber	= {2928851},
   doi		= {10.4171/JEMS/333},
   url		= {https://doi.org/10.4171/JEMS/333}
+}
+
+@Article{	  nakajima.nakashima:23:fluctuations,
+  author	= {Nakajima, Shuta and Nakashima, Makoto},
+  title		= {Fluctuations of two-dimensional stochastic heat equation
+		  and {KPZ} equation in subcritical regime for general
+		  initial conditions},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {28},
+  year		= {2023},
+  pages		= {Paper No. 1, 38},
+  mrclass	= {60H15 (60F05 60G44 60K37 82D60)},
+  mrnumber	= {4529085},
+  doi		= {10.1214/22-ejp885},
+  url		= {https://doi.org/10.1214/22-ejp885}
 }
 
 @Article{	  nakayama:04:liouville,
@@ -52557,6 +52733,23 @@
   mrreviewer	= {V. A. Malyshev}
 }
 
+@Article{	  sinai:95:remark,
+  author	= {Sinai, Yakov G.},
+  title		= {A remark concerning random walks with random potentials},
+  journal	= {Fund. Math.},
+  fjournal	= {Fundamenta Mathematicae},
+  volume	= {147},
+  year		= {1995},
+  number	= {2},
+  pages		= {173--180},
+  issn		= {0016-2736},
+  mrclass	= {60J15 (82B41 82B44 82D30)},
+  mrnumber	= {1341729},
+  mrreviewer	= {Aernout C. D. van Enter},
+  doi		= {10.4064/fm-147-2-173-180},
+  url		= {https://doi.org/10.4064/fm-147-2-173-180}
+}
+
 @Article{	  sinaui:82:limit,
   author	= {Sinau{i}, Ya. G.},
   title		= {The limit behavior of a one-dimensional random walk in a
@@ -55851,6 +56044,25 @@
   mrreviewer	= {Isamu D\^{o}ku},
   doi		= {10.1090/cln/016},
   url		= {https://doi.org/10.1090/cln/016}
+}
+
+@Article{	  vargas:06:local,
+  author	= {Vargas, Vincent},
+  title		= {A local limit theorem for directed polymers in random
+		  media: the continuous and the discrete case},
+  journal	= {Ann. Inst. H. Poincar\'{e} Probab. Statist.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e}. Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {42},
+  year		= {2006},
+  number	= {5},
+  pages		= {521--534},
+  issn		= {0246-0203},
+  mrclass	= {60K37 (60F05 82B44 82D60)},
+  mrnumber	= {2259972},
+  mrreviewer	= {Dimitris Cheliotis},
+  doi		= {10.1016/j.anihpb.2005.08.002},
+  url		= {https://doi.org/10.1016/j.anihpb.2005.08.002}
 }
 
 @InCollection{	  vazquez:96:free,
